--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,6 +42,17 @@ header {
   background: linear-gradient($color-header-gr, $color-header-grlight), url('../img/bg.jpg') no-repeat;
   background-blend-mode: multiply;
   background-size: cover;
+  position: relative;
+}
+header::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 50px;
+  position: absolute;
+  transform: skewY(-2deg);
+  background-color: $color-white;
+  bottom: -25px;
 }
 
 header h1 {
