--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,15 +1,20 @@
-/* BASE ------------------------------------------------- */
-$color-main: #760090;
-$color-accent: #EEEA72;
-$color-shade: #e3e3e3;
+// VARIABLES ------------------------------------ /
+
+$white: #fff;
+
+$color-primary: #278da4;
+$color-secondary: #b13c69;
+$color-accent: #eeea72;
+$color-shade: #eee;
 
 $color-text: #343434;
-$color-white: #fff;
-$color-header-gr: #9672EE;
-$color-header-grlight: #72D4EE;
+$color-bg: #3acec2;
+$color-bg-light: #009fe1;
 
-$font-main: 'Raleway', sans-serif;
-$font-headers: 'Bree Serif', serif;
+$font-stack-primary: 'Raleway', sans-serif;
+$font-stack-secondary: 'Bree Serif', serif;
+
+/* BASE ------------------------------------------- */
 
 * {
   box-sizing: border-box;
@@ -19,14 +24,14 @@ body {
   color: $color-text;
   font-size: 1rem;
   line-height: 1.5;
-  font-family: $font-main;
+  font-family: $font-stack-primary;
   text-align: center;
   margin: 0;
 }
 
 h1,
 h2 {
-  font-family: $font-headers;
+  font-family: $font-stack-secondary;
 }
 
 ul {
@@ -35,47 +40,62 @@ ul {
   margin: 0;
 }
 
-/* HEADER & FOOTER ----------------------------------------- */
+p {
+  margin-bottom: 1.25em;
+}
+
+/* HEADER & FOOTER -------------------------------- */
 
 header {
   height: 460px;
-  background: linear-gradient($color-header-gr, $color-header-grlight), url('../img/bg.jpg') no-repeat;
+  background: linear-gradient($color-bg-light, $color-bg), url('../img/bg.jpg') no-repeat;
   background-blend-mode: multiply;
   background-size: cover;
   position: relative;
+  h1 {
+    color: $white;
+    font-size: 4.8em;
+    margin-bottom: 0;
+    letter-spacing: 1px;
+  }
+  p {
+    color: $color-accent;
+    font-size: 1.25em;
+    margin: 0;
+  }
 }
+
 header::after {
   content: '';
   display: block;
   width: 100%;
-  height: 50px;
+  height: 50px; 
   position: absolute;
   transform: skewY(-2deg);
-  background-color: $color-white;
+  background-color: $white;
   bottom: -25px;
-}
-
-header h1 {
-  color: $color-white;
-  font-size: 4.8em;
-  margin-bottom: 0;
-  letter-spacing: 1px;
-}
-
-header p {
-  color: $color-accent;
-  font-size: 1.25em;
-  margin: 0;
-}
+} 
 
 footer {
   padding: 2em 0 0;
   height: 100px;
   background-color: $color-shade;
   margin-top: 3.5em;
+  position: relative; 
 }
 
-/* CONTAINERS ---------------------------------------------- */
+footer::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 50px; 
+  position: absolute;
+  transform: skewY(-2deg);
+  background-color: $color-shade;
+  top: -25px;
+} 
+
+/* CONTAINERS ------------------------------------- */
 
 .inner {
   padding: 0.5em 1em;
@@ -83,34 +103,33 @@ footer {
 
 .intro {
   margin: auto;
-  padding: 1em 1em 3em;
+  padding: 1em 1em 3em; 
 }
 
-/* COMPONENTS ----------------------------------------------- */
+/* COMPONENTS ------------------------------------- */
+
+.main-nav {
+  margin-top: 1em;
+  li {
+    display: inline-block;
+    margin: 0 0.65em;
+  }
+  a {
+    color: $white;
+    font-size: 0.85em;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 0.5em;
+  }
+}
 
 .img-featured {
   width: 165px;
-  border: 4px solid #fff;
+  border: 4px solid $white; 
   border-radius: 50%;
   margin-top: 75px;
   position: relative;
   z-index: 100;
-}
-
-.main-nav {
-  margin-top: 1em;
-
-  li{
-    display: inline-block;
-    padding: 0 5px;
-    margin: 0 0.65em;
-  }
-  a{
-    text-decoration: none;
-    text-transform: uppercase;
-    color: $color-white;
-    font-size: 0.8em;
-  }
 }
 
 .card {
@@ -118,22 +137,19 @@ footer {
   flex-direction: column;
   padding: 1.5em 1em;
   border: 1px solid $color-shade;
-  border-radius: .25em;
-
+  border-radius: 0.25em;
   h1 {
     margin: 0.35em 0 0;
     line-height: 1.25;
-  }
+  }  
   .icon,
   h1 {
-    color: $color-main;
+    color: $color-primary;
+  }
 }
-
-}
-
 
 .btn-info {
-  color: $color-white;
+  color: $white;
   display: inline-block;
   font-size: 0.85em;
   font-weight: bold;
@@ -141,19 +157,19 @@ footer {
   text-transform: uppercase;
   padding: 0.75em 1.5em;
   border-radius: 0.35em;
-  background-color: $color-main;
+  background-color: $color-primary;  
   margin-top: auto;
 }
 
 
-/* MEDIA QUERIES ------------------------------------------------- */
+/* MEDIA QUERIES ---------------------------------- */
 
 @media (max-width: 575px) {
   header {
     height: 340px;
-  }
-  header h1 {
-    font-size: 3.4em;
+    h1 {
+      font-size: 3.4em;
+    }
   }
   .img-featured {
     display: none;
@@ -164,7 +180,7 @@ footer {
   .main-content {
     display: flex;
     flex-wrap: wrap;
-  }
+  }  
   .card {
     flex: 1;
   }
