--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,12 +26,16 @@ $max-wdith: 1000px;
 }
 
 @mixin skew {
-content: '';
-display: block;
-width: 100%;
-height: 50px;
-position: absolute;
-transform: skewY(-2deg);
+  position: relative;
+  &::after{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    transform: skewY(-2deg);
+    @content;
+ }
 }
 /* BASE ------------------------------------------- */
 
@@ -70,7 +74,7 @@ header {
   background: linear-gradient($color-bg-light, $color-bg), url('../img/bg.jpg') no-repeat;
   background-blend-mode: multiply;
   background-size: cover;
-  position: relative;
+
   h1 {
     color: $white;
     font-size: 4.8em;
@@ -84,8 +88,7 @@ header {
     margin: 0;
   }
 
-  &:after {
-    @include skew;
+  @include skew{
     background-color: $white;
     bottom: -25px;
   }
@@ -98,13 +101,11 @@ footer {
   height: 100px;
   background-color: $color-shade;
   margin-top: 3.5em;
-  position: relative;
-
-  &:before {
-    @include skew;
-    background-color: $color-shade;
-    top: -25px;
-  }
+  
+@include skew{
+  background-color: $color-shade;
+  top: -25px;
+}
 }
 
 
